# Rednote-Qilin-Search-Rec-System

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  PUSH_CHECKLIST.md  README.md  README_EN.md  docker-compose.yml  echo  pyproject.toml  start.bat  start.sh  stop.bat  stop.sh
src/backend/: __init__.py
src/backend/offline/: __init__.py  config.py  pipeline.py
src/backend/online/: __init__.py  build_serving_snapshot.py  config.py  pipeline.py  realtime_cache.py  search_query.py  shared_query_encoder.py
src/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/src/: App.vue  main.ts  styles.css
src/preprocess/: __init__.py  build_features.py  build_note_image_emb.py  build_note_text_emb.py  build_query_text_emb.py  build_samples.py  parquet_to_mmap.py
src/recall/: __init__.py  build_faiss_ivfpq.py  build_multiroute_recall.py  build_seq_transition_index.py  build_swing_index.py  build_usercf_index.py  cf_shared_index.py  dssm_trainer.py  mine_hard_negatives.py
src/recall/index/: cf_rec_train_user_item_index.meta.json  cf_search_train_user_item_index.meta.json  dssm_rec_easy_ivfpq_meta.json  dssm_rec_hard_item_meta.json  dssm_rec_hard_ivfpq_meta.json  dssm_search_easy_ivfpq_meta.json  dssm_search_easy_test_query_meta.json  dssm_search_easy_train_query_meta.json  dssm_search_hard_item_meta.json  dssm_search_hard_ivfpq_meta.json  dssm_search_hard_test_query_map.json  dssm_search_hard_train_query_map.json  (+10 more)
src/training/: __init__.py  dien_ranker.py  gbdt_ranker.py  search_autoint_ranker.py  search_dcnv2_ranker.py  utils.py
(+38 files in other folders)
