[project]
name = "qilin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.25.0",
    "pandas",
    "matplotlib",
    "pillow",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "xgboost",
    "lightgbm",
    "transformers",
    "pyarrow>=22.0.0",
    "duckdb>=1.4.3",
    "tensorboard>=2.20.0",
    "faiss-cpu==1.7.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "redis>=5.2.1",
    "sentencepiece>=0.2.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
